--- a/StatusHQ/prof_profile/templates/prof_profile/prof_section.html
+++ b/StatusHQ/prof_profile/templates/prof_profile/prof_section.html
@@ -1,3 +1,7 @@
+{% extends "base_generic.html" %}
+
+{% block content %}
+
 {% load static %}
 
 <!DOCTYPE html>
@@ -55,7 +59,7 @@
         </div>
     </body>
 </html>
-
+{% endblock %}
 
 
 
