--- a/StatusHQ/homepage/templates/homepage/homepage.html
+++ b/StatusHQ/homepage/templates/homepage/homepage.html
@@ -4,7 +4,7 @@
   <h1 class="default">StatusHQ Home</h1>
   <p>Welcome to StatusHQ, a website developed by <em>Charlie, Peter and Nat</em>!</p>
   {% if user.is_authenticated %}
-  <p>Hey {{ user.get_username }}!</p> 
+  <p>Hey {{ user.get_full_name }}!</p> 
   {% else %}
   <p>Please login or signup to begin!</p>
   <a href="{% url 'login'%}?next={{request.path}}">Login</a>/<a href="{% url 'signup' %}">Signup</a>
