--- a/StatusHQ/applications/templates/applications/application_form.html
+++ b/StatusHQ/applications/templates/applications/application_form.html
@@ -1,6 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
+<h1>Create Application</h1>
   <form action="" method="post">
     {% csrf_token %}
     <table>
